--- a/src/ui/form/switch/style.scss
+++ b/src/ui/form/switch/style.scss
@@ -68,7 +68,7 @@
   }
 
   &_disabled {
-    opacity: 0.6;
+    opacity: token.$opacity_38;
     cursor: not-allowed;
   }
 }
