--- a/src/ui/navigation/pagination/style.scss
+++ b/src/ui/navigation/pagination/style.scss
@@ -8,7 +8,7 @@
   margin-top: token.$spacing_32;
 
   &_item {
-    border: 1px solid token.$color_border_default;
+    border: token.$border_width_standard solid token.$color_border_default;
     background: token.$color_bg_solid;
     border-radius: token.$radius_md;
     padding: 6px 10px;
@@ -30,7 +30,7 @@
     }
 
     &:focus-visible {
-      box-shadow: 0 0 0 3px token.$color_border_subtle;
+      box-shadow: token.$focus_ring;
       border-color: token.$color_brand_primary;
     }
   }
@@ -39,6 +39,9 @@
     display: flex;
     align-items: center;
     gap: 6px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
   }
 
   &_page_button {
@@ -60,7 +63,7 @@
     }
 
     &:focus-visible {
-      box-shadow: 0 0 0 3px token.$color_border_subtle;
+      box-shadow: token.$focus_ring;
     }
   }
 
