--- a/src/ui/overlay/modal/style.scss
+++ b/src/ui/overlay/modal/style.scss
@@ -12,13 +12,13 @@
     background: token.$color_bg_solid;
     border-radius: token.$radius_lg;
     box-shadow: token.$shadow_level3;
-    max-width: calc(100% - 32px);
+    max-width: calc(100% - #{token.$spacing_32 * 2});
     overflow: visible;
   }
 
   &_header {
     padding: token.$spacing_16;
-    border-bottom: 1px solid token.$color_border_default;
+    border-bottom: token.$border_width_standard solid token.$color_border_default;
     color: token.$color_text_heading;
     @include token.heading_small;
   }
